Bug 1927606 - [wpt-sync] Update web-platform-tests to 86facfeb5f38404f8ff3ecf7f15fe035ecfdfe0e, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 86facfeb5f38404f8ff3ecf7f15fe035ecfdfe0e
wpt-type: landing

UltraBlame original commit: b21d7efd5a57e050ebe016eac5997d17f36c265d

--- a/testing/web-platform/meta/clipboard-apis/feature-policy/clipboard-write/clipboard-write-enabled-by-feature-policy-cross-origin-tentative.https.sub.html.ini
+++ b/testing/web-platform/meta/clipboard-apis/feature-policy/clipboard-write/clipboard-write-enabled-by-feature-policy-cross-origin-tentative.https.sub.html.ini
@@ -31,30 +31,30 @@ os
 =
 =
 "
-android
+win
 "
 )
 and
+not
 debug
 and
-fission
-:
-[
-OK
-TIMEOUT
-]
-if
 (
+processor
+=
+=
+"
+x86
+"
+)
+:
+TIMEOUT
+if
 os
 =
 =
 "
 android
 "
-)
-and
-not
-debug
 :
 [
 OK
