--- a/testing/web-platform/meta/css/cssom-view/scroll-behavior-subframe-root.html.ini
+++ b/testing/web-platform/meta/css/cssom-view/scroll-behavior-subframe-root.html.ini
@@ -261,3 +261,25 @@ debug
 PASS
 FAIL
 ]
+[
+Subframe
+setting
+scrollLeft
+with
+smooth
+scroll
+-
+behavior
+]
+expected
+:
+if
+not
+fission
+and
+debug
+:
+[
+PASS
+FAIL
+]
