--- a/testing/web-platform/meta/html/dom/idlharness.https.html.ini
+++ b/testing/web-platform/meta/html/dom/idlharness.https.html.ini
@@ -1443,9 +1443,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1463,9 +1460,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1483,9 +1477,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1509,9 +1500,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1541,9 +1529,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1571,9 +1556,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1594,9 +1576,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1615,9 +1594,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1639,9 +1615,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1660,9 +1633,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1681,9 +1651,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1702,9 +1669,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1728,9 +1692,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1753,9 +1714,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1779,9 +1737,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1804,9 +1759,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1829,9 +1781,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1850,9 +1799,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1871,9 +1817,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1892,9 +1835,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1913,9 +1853,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1938,9 +1875,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1958,9 +1892,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -1978,9 +1909,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2004,9 +1932,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2036,9 +1961,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2066,9 +1988,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2087,9 +2006,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2108,9 +2024,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2129,9 +2042,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2150,9 +2060,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2171,9 +2078,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2194,9 +2098,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2215,9 +2116,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2240,9 +2138,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2260,9 +2155,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2280,9 +2172,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2306,9 +2195,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2338,9 +2224,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2368,9 +2251,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2389,9 +2269,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2410,9 +2287,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2431,9 +2305,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2456,9 +2327,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2476,9 +2344,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2496,9 +2361,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2522,9 +2384,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2554,9 +2413,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2584,9 +2440,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2605,9 +2458,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2626,9 +2476,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2647,9 +2494,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2668,9 +2512,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2689,9 +2530,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2710,9 +2548,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2731,9 +2566,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2752,9 +2584,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2773,9 +2602,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2794,9 +2620,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2819,9 +2642,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2842,9 +2662,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2867,9 +2684,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2887,9 +2701,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2907,9 +2718,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2933,9 +2741,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2965,9 +2770,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -2995,9 +2797,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3016,9 +2815,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3037,9 +2833,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3058,9 +2851,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3079,9 +2869,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3100,9 +2887,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3123,9 +2907,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3148,9 +2929,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3168,9 +2946,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3188,9 +2963,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3214,9 +2986,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3246,9 +3015,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3276,9 +3042,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3297,9 +3060,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3318,9 +3078,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3523,9 +3280,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3548,9 +3302,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3568,9 +3319,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3588,9 +3336,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3614,9 +3359,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3646,9 +3388,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3676,9 +3415,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3697,9 +3433,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3718,9 +3451,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -3739,9 +3469,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -4459,9 +4186,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -4489,9 +4213,6 @@ os
 "
 android
 "
-and
-not
-sessionHistoryInParent
 :
 FAIL
 [
@@ -5267,3 +4988,71 @@ type
 expected
 :
 FAIL
+[
+HTMLElement
+interface
+:
+attribute
+autocorrect
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
+[
+HTMLElement
+interface
+:
+document
+.
+createElement
+(
+"
+noscript
+"
+)
+must
+inherit
+property
+"
+autocorrect
+"
+with
+the
+proper
+type
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
