--- a/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
+++ b/testing/web-platform/meta/intersection-observer/isIntersecting-threshold.html.ini
@@ -31,75 +31,11 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 )
-and
-not
-debug
-and
-not
-asan
-and
-tsan
 :
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
 if
 (
 os
@@ -110,9 +46,27 @@ android
 "
 )
 and
-not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -143,75 +97,11 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 )
-and
-not
-debug
-and
-not
-asan
-and
-tsan
 :
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
 if
 (
 os
@@ -222,9 +112,27 @@ android
 "
 )
 and
-not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
@@ -252,75 +160,11 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 )
-and
-not
-debug
-and
-not
-asan
-and
-tsan
 :
-[
 PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-debug
-:
-[
-PASS
-FAIL
-]
 if
 (
 os
@@ -331,9 +175,27 @@ android
 "
 )
 and
-not
 debug
 :
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
 [
 PASS
 FAIL
