--- a/testing/web-platform/meta/xhr/send-sync-response-event-order.htm.ini
+++ b/testing/web-platform/meta/xhr/send-sync-response-event-order.htm.ini
@@ -11,6 +11,31 @@ order
 .
 htm
 ]
+expected
+:
+if
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+(
+os
+=
+=
+"
+linux
+"
+)
+:
+[
+OK
+CRASH
+]
 [
 XMLHttpRequest
 :
