--- a/testing/web-platform/meta/css/css-pseudo/target-text-dynamic-002.html.ini
+++ b/testing/web-platform/meta/css/css-pseudo/target-text-dynamic-002.html.ini
@@ -12,11 +12,6 @@ html
 expected
 :
 if
-not
-fission
-and
-swgl
-and
 (
 os
 =
@@ -26,18 +21,49 @@ linux
 "
 )
 and
-debug
-:
-FAIL
-if
 not
 fission
 and
-not
-swgl
-and
 debug
 and
+swgl
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+fission
+and
+not
+tsan
+:
+FAIL
+if
 (
 os
 =
@@ -46,25 +72,45 @@ os
 android
 "
 )
-:
-[
-PASS
-FAIL
-]
-if
-fission
-and
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-fission
 and
 not
-tsan
+swgl
+and
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+android
+"
+)
+and
+swgl
+:
+PASS
+if
+os
+=
+=
+"
+win
+"
+:
+FAIL
+if
+os
+=
+=
+"
+mac
+"
 :
 FAIL
 [
