--- a/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
@@ -27,9 +27,6 @@ linux
 "
 )
 and
-not
-tsan
-and
 (
 processor
 =
@@ -42,7 +39,10 @@ and
 not
 debug
 and
+not
 asan
+and
+tsan
 :
 [
 PASS
@@ -58,8 +58,37 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
+not
+asan
+and
 not
 tsan
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 (
 processor
@@ -70,7 +99,10 @@ x86_64
 "
 )
 and
+not
 debug
+and
+asan
 :
 [
 PASS
@@ -112,7 +144,16 @@ linux
 "
 )
 and
-tsan
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+debug
 :
 [
 PASS
