Bug 1920294 - disable browser_tab_groups.js on linux for high failure rate. r=aryx,tabbrowser-reviewers,mconley
Differential Revision: https://phabricator.services.mozilla.com/D227055

UltraBlame original commit: e4e0bd6e7ebcedd90d0120711c6b607bd8e7300c

--- a/browser/components/tabbrowser/test/browser/tabs/browser.toml
+++ b/browser/components/tabbrowser/test/browser/tabs/browser.toml
@@ -1790,6 +1790,41 @@ browser_tab_groups
 js
 "
 ]
+skip
+-
+if
+=
+[
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+]
+#
+Bug
+1920294
 [
 "
 browser_tab_label_during_reload
