Bug 1927789 - Add sthompson as a peer for Tabbed Browser. r=zeid
Differential Revision: https://phabricator.services.mozilla.com/D227228

UltraBlame original commit: 8368dabbfb9657f5b1a42ca7b215a2463c54942b

--- a/mots.yaml
+++ b/mots.yaml
@@ -120,13 +120,13 @@ updated_at
 -
 10
 -
-26T06
+29T15
 :
-47
+14
 :
-31
+25
 .
-795894
+266546
 +
 00
 :
@@ -3439,6 +3439,19 @@ Banner
 nick
 :
 standard8
+-
+&
+sthompson
+bmo_id
+:
+756026
+name
+:
+Stephen
+Thompson
+nick
+:
+sthompson
 -
 &
 stransky
@@ -16123,6 +16136,9 @@ niklas
 -
 *
 jswinarton
+-
+*
+sthompson
 machine_name
 :
 tabbed_browser
@@ -19173,7 +19189,7 @@ hashes
 :
 config
 :
-3755a48cc09fef9cee3aa188063e25160d63ed56
+c9b41bc02e006b1f46ebab491e09382f7d41d99d
 export
 :
-3f6354326f463e53dbc19cca9b00505d9950c96a
+a7e7a2699aa14c56dc99524a267ee7b5db9438c7
