Bug 1926917 - Update `wgpu` to revision 64a61ee5c69569bbb3db03563997e88a229eba17. r=webgpu-reviewers,supply-chain-reviewers,nical
Differential Revision: https://phabricator.services.mozilla.com/D226830

UltraBlame original commit: 0c870b29b3c8027fd0d3d21744e22c91845c8053

--- a/gfx/wgpu_bindings/moz.yaml
+++ b/gfx/wgpu_bindings/moz.yaml
@@ -123,19 +123,8 @@ SSS
 "
 release
 :
-d70ef62e9e0683789f745c6a4354495f39354c15
-(
-2024
--
-10
--
-10T15
-:
-24
-:
-49Z
-)
-.
+commit
+64a61ee5c69569bbb3db03563997e88a229eba17
 #
 Revision
 to
@@ -156,7 +145,7 @@ preferred
 )
 revision
 :
-d70ef62e9e0683789f745c6a4354495f39354c15
+64a61ee5c69569bbb3db03563997e88a229eba17
 license
 :
 [
