Bug 1927501 - Convert API-migrated nsscomponent timespans to quantity to avoid invalid states r=janerik
Differential Revision: https://phabricator.services.mozilla.com/D227234

UltraBlame original commit: e39fc9374407c98cb7406cda77c213396de05913

--- a/security/manager/ssl/metrics.yaml
+++ b/security/manager/ssl/metrics.yaml
@@ -2062,7 +2062,7 @@ nss_initialization
 :
 type
 :
-timespan
+quantity
 description
 :
 >
@@ -2134,7 +2134,7 @@ com
 expires
 :
 never
-time_unit
+unit
 :
 millisecond
 telemetry_mirror
@@ -2144,7 +2144,7 @@ loading_certs_task
 :
 type
 :
-timespan
+quantity
 description
 :
 >
@@ -2228,7 +2228,7 @@ com
 expires
 :
 never
-time_unit
+unit
 :
 millisecond
 telemetry_mirror
