Bug 1923495: Update RecordedNimbusContext to support behavioral event queries. r=beth,android-reviewers,boek
Differential Revision: https://phabricator.services.mozilla.com/D224994

UltraBlame original commit: b1ccea9b5ebeb0e688480f531a35a38e625bf4db

--- a/mobile/android/fenix/app/build.gradle
+++ b/mobile/android/fenix/app/build.gradle
@@ -7214,6 +7214,10 @@ ComponentsDependencies
 .
 androidx_work_testing
 testImplementation
+ComponentsDependencies
+.
+mozilla_appservices_full_megazord_forUnitTests
+testImplementation
 (
 ComponentsDependencies
 .
