Bug 1921778 - Add a test for favicon webchannel request r=julienw,profiler-reviewers
Differential Revision: https://phabricator.services.mozilla.com/D226516

UltraBlame original commit: ec57965323cffc66da0f2acab38504c77c327f7d

--- a/devtools/client/performance-new/test/browser/browser.toml
+++ b/devtools/client/performance-new/test/browser/browser.toml
@@ -112,6 +112,13 @@ webchannel
 .
 html
 "
+"
+webchannel
+-
+favicons
+.
+html
+"
 ]
 [
 "
@@ -527,6 +534,22 @@ enable
 menu
 -
 button
+.
+js
+"
+]
+https_first_disabled
+=
+true
+[
+"
+browser_webchannel
+-
+page
+-
+favicon
+-
+data
 .
 js
 "
