Bug 1927333 - clean up mochitest.toml files for mac/linux to include processor and os_version. r=aryx,jgilbert,dom-storage-reviewers,janv
Differential Revision: https://phabricator.services.mozilla.com/D226987

UltraBlame original commit: d7204a1b3b353def5e9f68dc7ced568b626cf2fb

--- a/dom/canvas/test/webgl-mochitest/mochitest.toml
+++ b/dom/canvas/test/webgl-mochitest/mochitest.toml
@@ -245,10 +245,56 @@ android
 '
 "
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 [
@@ -301,11 +347,21 @@ linux
 '
 &
 &
-display
-!
+os_version
+=
 =
 '
-wayland
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
@@ -365,12 +421,102 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_catalina
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 [
@@ -401,10 +547,56 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 "
 win10_2009
@@ -430,10 +622,56 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 "
 win10_2009
@@ -465,12 +703,102 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_catalina
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 "
 win10_2009
@@ -510,12 +838,102 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_catalina
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 "
 win10_2009
@@ -615,6 +1033,50 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
@@ -831,12 +1293,102 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_catalina
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+22
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+"
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 [
@@ -923,7 +1475,30 @@ by
 bug
 1632249
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 ]
 [
@@ -1118,12 +1693,66 @@ os_version
 .
 04
 '
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 "
 win11_2009
@@ -1184,12 +1813,66 @@ os_version
 .
 04
 '
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 "
 win11_2009
