--- a/dom/html/test/mochitest.toml
+++ b/dom/html/test/mochitest.toml
@@ -1049,18 +1049,62 @@ if
 =
 [
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
+opt
 "
 "
 os
@@ -1078,6 +1122,14 @@ os_version
 18
 .
 04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -1099,6 +1151,14 @@ os_version
 18
 .
 04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 &
 &
@@ -1636,6 +1696,14 @@ os_version
 18
 .
 04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 #
@@ -2717,7 +2785,30 @@ android
 '
 "
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 "
 #
 TIMED_OUT
@@ -2736,7 +2827,30 @@ bug
 1275664
 )
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
+&
+&
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
 "
 #
 TIMED_OUT
@@ -3169,11 +3283,11 @@ popup
 window
 size
 "
-display
+os
 =
 =
 '
-wayland
+linux
 '
 &
 &
@@ -3188,6 +3302,14 @@ os_version
 &
 &
 debug
+&
+&
+display
+=
+=
+'
+wayland
+'
 "
 #
 Bug
@@ -4385,6 +4507,24 @@ os
 =
 '
 linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 "
