--- a/dom/indexedDB/test/mochitest-common.toml
+++ b/dom/indexedDB/test/mochitest-common.toml
@@ -1218,6 +1218,13 @@ html
 ]
 [
 "
+test_file_filelist
+.
+html
+"
+]
+[
+"
 test_file_put_get_object
 .
 html
@@ -1296,13 +1303,6 @@ html
 [
 "
 test_file_transaction_abort
-.
-html
-"
-]
-[
-"
-test_file_filelist
 .
 html
 "
@@ -1484,8 +1484,7 @@ if
 xorigin
 &
 &
-!
-debug
+opt
 "
 #
 Hangs
@@ -1508,14 +1507,15 @@ os_version
 '
 &
 &
-bits
+processor
 =
 =
-64
+'
+x86_64
+'
 &
 &
-!
-debug
+opt
 "
 #
 Bug
@@ -1682,6 +1682,14 @@ os_version
 18
 .
 04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
 '
 "
 ]
@@ -1922,28 +1930,73 @@ os_version
 '
 &
 &
-bits
+processor
 =
 =
-64
+'
+x86_64
+'
 &
 &
-!
-debug
+opt
 "
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
+opt
 "
 "
 os
