--- a/dom/serviceworkers/test/mochitest-common.toml
+++ b/dom/serviceworkers/test/mochitest-common.toml
@@ -1641,6 +1641,26 @@ os
 '
 linux
 '
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+18
+.
+04
+'
 "
 ]
 #
@@ -1945,8 +1965,7 @@ if
 win11_2009
 &
 &
-!
-debug
+opt
 "
 #
 Bug
@@ -1960,10 +1979,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -1972,11 +2003,33 @@ debug
 Bug
 1749068
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
@@ -2027,19 +2080,6 @@ linux
 '
 &
 &
-bits
-=
-=
-64
-&
-&
-!
-debug
-&
-&
-asan
-&
-&
 os_version
 =
 =
@@ -2048,16 +2088,27 @@ os_version
 .
 04
 '
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+asan
 "
 #
 Bug
 1585668
 "
-display
+os
 =
 =
 '
-wayland
+linux
 '
 &
 &
@@ -2072,6 +2123,14 @@ os_version
 &
 &
 debug
+&
+&
+display
+=
+=
+'
+wayland
+'
 "
 #
 Bug
@@ -2249,10 +2308,22 @@ linux
 '
 &
 &
-bits
+os_version
 =
 =
-64
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
 &
 &
 debug
@@ -2551,14 +2622,6 @@ if
 [
 "
 true
-"
-"
-os
-=
-=
-'
-android
-'
 "
 ]
 [
