--- a/dom/tests/mochitest/general/mochitest.toml
+++ b/dom/tests/mochitest/general/mochitest.toml
@@ -916,10 +916,12 @@ os_version
 '
 &
 &
-bits
+processor
 =
 =
-64
+'
+x86_64
+'
 "
 #
 Bug
@@ -1159,8 +1161,7 @@ bits
 64
 &
 &
-!
-debug
+opt
 "
 #
 Bug
@@ -1175,28 +1176,71 @@ bits
 64
 &
 &
-!
-debug
+opt
 "
 #
 Bug
 1730152
 "
-apple_catalina
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+10
+.
+15
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+&
+&
+opt
 "
 #
 Bug
 1730152
 "
-apple_silicon
+os
+=
+=
+'
+mac
+'
 &
 &
-!
-debug
+os_version
+=
+=
+'
+11
+.
+20
+'
+&
+&
+arch
+=
+=
+'
+aarch64
+'
+&
+&
+opt
 "
 #
 Bug
