--- a/mobile/android/installer/package-manifest.in
+++ b/mobile/android/installer/package-manifest.in
@@ -358,6 +358,16 @@ gvr
 DLL_SUFFIX
 #
 endif
+#
+ifdef
+MOZ_CRASHREPORTER
+BINPATH
+/
+DLL_PREFIX
+minidump_analyzer
+DLL_SUFFIX
+#
+endif
 [
 xpcom
 ]
