Bug 1927706 - Part 7: Update numbering and measurement units. r=spidermonkey-reviewers,mgaudet
Add new numbering systems from CLDR 46.

Updated by running `./make_intl_data.py numbering` and `./make_intl_data.py units`.

Differential Revision: https://phabricator.services.mozilla.com/D227207

UltraBlame original commit: 40b7907d7fc85c127c93160ee676f5b6f103cd1c

--- a/js/src/builtin/intl/NumberingSystems.yaml
+++ b/js/src/builtin/intl/NumberingSystems.yaml
@@ -140,11 +140,15 @@ diak
 -
 fullwide
 -
+gara
+-
 gong
 -
 gonm
 -
 gujr
+-
+gukh
 -
 guru
 -
@@ -163,6 +167,8 @@ kawi
 khmr
 -
 knda
+-
+krai
 -
 lana
 -
@@ -198,6 +204,10 @@ mtei
 -
 mymr
 -
+mymrepka
+-
+mymrpao
+-
 mymrshan
 -
 mymrtlng
@@ -210,9 +220,13 @@ nkoo
 -
 olck
 -
+onao
+-
 orya
 -
 osma
+-
+outlined
 -
 rohg
 -
@@ -229,6 +243,8 @@ sinh
 sora
 -
 sund
+-
+sunu
 -
 takr
 -
