Bug 1927602 [wpt PR 48845] - Update wpt metadata, a=testonly
wpt-pr: 48845
wpt-type: metadata

UltraBlame original commit: 1c13a4ab539a162a11eef75c7e1276e589c48d6c

--- a/testing/web-platform/meta/dom/nodes/moveBefore/tentative/selection-preserve.html.ini
+++ b/testing/web-platform/meta/dom/nodes/moveBefore/tentative/selection-preserve.html.ini
@@ -16,3 +16,31 @@ selection
 expected
 :
 FAIL
+[
+moveBefore
+should
+not
+reset
+selection
+with
+preceding
+text
+]
+expected
+:
+FAIL
+[
+moveBefore
+should
+not
+reset
+selection
+with
+preceding
+and
+following
+text
+]
+expected
+:
+FAIL
