--- a/testing/web-platform/tests/html/canvas/tools/yaml-new/compositing.yaml
+++ b/testing/web-platform/tests/html/canvas/tools/yaml-new/compositing.yaml
@@ -1819,11 +1819,14 @@ ctx
 fillStyle
 =
 '
-rgb
+rgba
 (
 0
 102
-255
+240
+0
+.
+8
 )
 '
 ;
@@ -1910,6 +1913,7 @@ variant_names
 }
 }
 '
+;
 {
 {
 js_draw_code
@@ -1928,13 +1932,18 @@ push_group
 )
 cr
 .
-set_source_rgb
+set_source_rgba
 (
 0
 102
 /
 255
-1
+240
+/
+255
+0
+.
+8
 )
 cr
 .
@@ -2148,13 +2157,13 @@ maxDifference
 =
 0
 -
-2
+3
 ;
 totalPixels
 =
 0
 -
-10210
+25392
 variants_layout
 :
 -
@@ -2347,6 +2356,8 @@ filter
 :
 js_filter_code
 :
+|
+-
 ctx
 .
 filter
@@ -2364,10 +2375,11 @@ rgb
 (
 255
 154
-0
+100
 )
 )
 '
+;
 cairo_filter_code
 :
 |
@@ -2418,13 +2430,15 @@ OPERATOR_IN
 )
 cr
 .
-set_source_rgba
+set_source_rgb
 (
 1
 154
 /
 255
-0
+100
+/
+255
 )
 cr
 .
@@ -2482,11 +2496,14 @@ ctx
 shadowColor
 =
 '
-rgb
+rgba
 (
 154
 0
 154
+0
+.
+8
 )
 '
 ;
@@ -2539,7 +2556,7 @@ OPERATOR_IN
 )
 cr
 .
-set_source_rgb
+set_source_rgba
 (
 154
 /
@@ -2548,6 +2565,9 @@ set_source_rgb
 154
 /
 255
+0
+.
+8
 )
 cr
 .
