Bug 1927972 - [wpt-sync] Update web-platform-tests to 3c0bfa31dc842d0dbce0e377bfd39a4aa0ec4fd9, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 3c0bfa31dc842d0dbce0e377bfd39a4aa0ec4fd9
wpt-type: landing

UltraBlame original commit: 4b8e8495f2b369c007c1efb26ae4b33ed4ef14e5

--- a/testing/web-platform/meta/css/css-grid/alignment/grid-item-mixed-baseline-003.html.ini
+++ b/testing/web-platform/meta/css/css-grid/alignment/grid-item-mixed-baseline-003.html.ini
@@ -1,11 +1,13 @@
 [
-target
+grid
 -
-text
+item
 -
-dynamic
+mixed
 -
-002
+baseline
+-
+003
 .
 html
 ]
@@ -15,10 +17,6 @@ if
 not
 fission
 and
-swgl
-and
-debug
-and
 (
 os
 =
@@ -27,16 +25,13 @@ os
 linux
 "
 )
-:
-FAIL
-if
-fission
+and
+debug
 and
 not
-tsan
+swgl
 :
-FAIL
 [
-FAIL
 PASS
+FAIL
 ]
