--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-remove-source.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-remove-source.html.ini
@@ -34,12 +34,6 @@ linux
 "
 )
 and
-not
-debug
-and
-not
-tsan
-and
 asan
 and
 fission
@@ -54,22 +48,19 @@ os
 =
 =
 "
-win
+linux
 "
 )
 and
-debug
+asan
 and
-(
-processor
-=
-=
-"
-x86
-"
-)
+not
+fission
 :
+[
+PASS
 FAIL
+]
 if
 (
 os
@@ -81,7 +72,7 @@ linux
 )
 and
 not
-debug
+asan
 and
 tsan
 :
