--- a/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
+++ b/testing/web-platform/meta/html/semantics/popovers/popover-events.html.ini
@@ -23,9 +23,6 @@ popovers
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -35,49 +32,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -87,9 +52,6 @@ tsan
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -98,6 +60,9 @@ os
 win
 "
 )
+and
+not
+debug
 and
 (
 processor
@@ -110,9 +75,6 @@ x86
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -121,6 +83,9 @@ os
 mac
 "
 )
+and
+not
+debug
 :
 PASS
 [
@@ -145,9 +110,6 @@ popovers
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -157,49 +119,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -209,9 +139,6 @@ tsan
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -220,6 +147,9 @@ os
 win
 "
 )
+and
+not
+debug
 and
 (
 processor
@@ -232,9 +162,6 @@ x86
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -243,6 +170,9 @@ os
 mac
 "
 )
+and
+not
+debug
 :
 PASS
 [
@@ -267,9 +197,6 @@ transition
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -279,49 +206,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -331,9 +226,6 @@ tsan
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -342,6 +234,9 @@ os
 win
 "
 )
+and
+not
+debug
 and
 (
 processor
@@ -354,9 +249,6 @@ x86
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -365,6 +257,9 @@ os
 mac
 "
 )
+and
+not
+debug
 :
 PASS
 [
@@ -387,9 +282,6 @@ removal
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -399,49 +291,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -451,9 +311,6 @@ tsan
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -462,6 +319,9 @@ os
 win
 "
 )
+and
+not
+debug
 and
 (
 processor
@@ -474,9 +334,6 @@ x86
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -485,6 +342,9 @@ os
 mac
 "
 )
+and
+not
+debug
 :
 PASS
 [
@@ -503,9 +363,6 @@ coalesced
 expected
 :
 if
-not
-debug
-and
 (
 os
 =
@@ -515,49 +372,17 @@ linux
 "
 )
 and
-asan
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
-if
-not
-debug
-and
 (
-os
+processor
 =
 =
 "
-linux
+x86_64
 "
 )
 and
 not
-asan
-and
-tsan
-:
-[
-FAIL
-PASS
-]
-if
-not
 debug
-and
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 asan
@@ -567,9 +392,6 @@ tsan
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -578,6 +400,9 @@ os
 win
 "
 )
+and
+not
+debug
 and
 (
 processor
@@ -590,9 +415,6 @@ x86
 :
 PASS
 if
-not
-debug
-and
 (
 os
 =
@@ -601,6 +423,9 @@ os
 mac
 "
 )
+and
+not
+debug
 :
 PASS
 [
