--- a/testing/web-platform/meta/resize-observer/calculate-depth-for-node.html.ini
+++ b/testing/web-platform/meta/resize-observer/calculate-depth-for-node.html.ini
@@ -9,6 +9,11 @@ node
 .
 html
 ]
+max
+-
+asserts
+:
+2
 [
 "
 Calculate
@@ -24,35 +29,14 @@ DOM
 expected
 :
 if
-(
 os
 =
 =
 "
 android
 "
-)
-and
-not
-debug
 :
 [
-FAIL
 PASS
-]
-if
-(
-os
-=
-=
-"
-android
-"
-)
-and
-debug
-:
-[
 FAIL
-PASS
 ]
