--- a/testing/web-platform/meta/webaudio/the-audio-api/the-analysernode-interface/test-analyser-output.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-analysernode-interface/test-analyser-output.html.ini
@@ -15,13 +15,35 @@ os
 =
 =
 "
-android
+mac
 "
 )
 and
-fission
+debug
 :
 [
 OK
 TIMEOUT
+]
+[
+AnalyserNode
+output
+]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+debug
+:
+[
+PASS
+NOTRUN
 ]
