--- a/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
+++ b/testing/web-platform/meta/webaudio/the-audio-api/the-audiocontext-interface/processing-after-resume.https.html.ini
@@ -9,6 +9,25 @@ https
 .
 html
 ]
+expected
+:
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+OK
+TIMEOUT
+]
 [
 Test
 consistency
@@ -27,12 +46,9 @@ os
 =
 =
 "
-win
+linux
 "
 )
-and
-not
-debug
 and
 (
 processor
@@ -40,60 +56,11 @@ processor
 =
 "
 x86_64
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-win
-"
-)
-and
-not
-debug
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-linux
 "
 )
 and
 not
 tsan
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
 :
 PASS
 if
@@ -109,6 +76,24 @@ and
 debug
 :
 PASS
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
+:
+[
+PASS
+TIMEOUT
+FAIL
+]
 if
 os
 =
