--- a/testing/web-platform/meta/workers/Worker-timeout-decreasing-order.html.ini
+++ b/testing/web-platform/meta/workers/Worker-timeout-decreasing-order.html.ini
@@ -34,14 +34,21 @@ linux
 "
 )
 and
-not
-swgl
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 and
 not
-fission
+tsan
 and
-not
 debug
+and
+fission
 :
 PASS
 if
@@ -54,12 +61,23 @@ linux
 "
 )
 and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
 not
-swgl
+tsan
 and
-fission
-and
+not
 debug
+and
+not
+fission
 :
 PASS
 if
@@ -71,9 +89,6 @@ os
 android
 "
 )
-and
-not
-swgl
 and
 not
 debug
