--- a/testing/web-platform/meta/css/cssom-view/scroll-behavior-subframe-window.html.ini
+++ b/testing/web-platform/meta/css/cssom-view/scroll-behavior-subframe-window.html.ini
@@ -238,3 +238,37 @@ debug
 PASS
 FAIL
 ]
+[
+Main
+frame
+with
+smooth
+scroll
+-
+behavior
+;
+scrollTo
+(
+)
+with
+default
+behavior
+]
+expected
+:
+if
+(
+processor
+=
+=
+"
+x86
+"
+)
+and
+debug
+:
+[
+PASS
+FAIL
+]
