--- a/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-remove-src.html.ini
+++ b/testing/web-platform/meta/html/semantics/embedded-content/media-elements/loading-the-media-resource/resource-selection-invoke-remove-src.html.ini
@@ -37,58 +37,19 @@ win
 "
 )
 and
-debug
-and
 (
 processor
 =
 =
 "
-x86_64
+x86
 "
 )
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-asan
-and
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-asan
 and
 not
-fission
+debug
 :
-[
-PASS
 FAIL
-]
 if
 (
 os
@@ -118,14 +79,31 @@ linux
 "
 )
 and
-not
 asan
-and
-not
-tsan
 :
+[
+PASS
+FAIL
+]
+if
+os
+=
+=
+"
+mac
+"
+:
+FAIL
+if
+os
+=
+=
+"
+android
+"
+:
+FAIL
 [
 FAIL
 PASS
 ]
-FAIL
