Bug 1928124 - Implement push error metrics r=asuth
Differential Revision: https://phabricator.services.mozilla.com/D227384

UltraBlame original commit: 494f1187185621ebba5fc651066238081a19167b

--- a/toolkit/components/glean/tags.yaml
+++ b/toolkit/components/glean/tags.yaml
@@ -801,6 +801,27 @@ Core
 :
 DOM
 :
+Push
+Subscriptions
+'
+:
+description
+:
+The
+Bugzilla
+component
+which
+applies
+to
+this
+object
+.
+'
+Core
+:
+:
+DOM
+:
 Security
 '
 :
