--- a/gfx/wr/servo-tidy.toml
+++ b/gfx/wr/servo-tidy.toml
@@ -157,9 +157,6 @@ types
 -
 shared
 "
-"
-gl_generator
-"
 #
 Internal
 dependencies
@@ -286,6 +283,55 @@ bug
 1765324
 "
 wasi
+"
+#
+Pulled
+in
+by
+mozangle
+dev
+-
+dep
+on
+windows
+"
+libloading
+"
+"
+windows_i686_gnu
+"
+"
+windows_x86_64_msvc
+"
+"
+windows_x86_64_gnullvm
+"
+"
+windows_x86_64_gnu
+"
+"
+regex
+-
+syntax
+"
+"
+windows
+-
+targets
+"
+"
+windows
+-
+sys
+"
+"
+windows_aarch64_msvc
+"
+"
+windows_i686_msvc
+"
+"
+windows_aarch64_gnullvm
 "
 ]
 #
