Bug 1875877 - Disable browser_opentabs_recency.js on win opt and linux 18.04 x64 for causing frequent failures. r=intermittent-reviewers,fxview-reviewers,jmaher
Differential Revision: https://phabricator.services.mozilla.com/D227044

UltraBlame original commit: ad0661ea11613f9c48a2fdf1c4d2dcfcc8ee78e0

--- a/browser/components/firefoxview/tests/browser/browser.toml
+++ b/browser/components/firefoxview/tests/browser/browser.toml
@@ -229,6 +229,43 @@ os
 mac
 '
 "
+"
+os
+=
+=
+'
+linux
+'
+&
+&
+os_version
+=
+=
+'
+18
+.
+04
+'
+&
+&
+processor
+=
+=
+'
+x86_64
+'
+"
+"
+os
+=
+=
+'
+win
+'
+&
+&
+opt
+"
 ]
 #
 macos
@@ -244,7 +281,9 @@ frequent
 fails
 on
 linux
-.
+and
+windows
+opt
 [
 "
 browser_opentabs_search
