--- a/mobile/android/fenix/app/nimbus.fml.yaml
+++ b/mobile/android/fenix/app/nimbus.fml.yaml
@@ -2239,6 +2239,35 @@ Boolean
 default
 :
 false
+boost
+-
+amp
+-
+wiki
+:
+description
+:
+>
+The
+feature
+boost
+wiki
+and
+AMP
+suggestions
+to
+the
+top
+of
+its
+group
+.
+type
+:
+Boolean
+default
+:
+false
 defaults
 :
 -
@@ -2248,6 +2277,13 @@ developer
 value
 :
 enabled
+:
+true
+boost
+-
+amp
+-
+wiki
 :
 true
 -
