Bug 1927802 [wpt PR 48854] - Update wpt metadata, a=testonly
wpt-pr: 48854
wpt-type: metadata

UltraBlame original commit: 6e7ae2cd2a928e95c64f35b69cb31a7ab6354cf6

--- a/testing/web-platform/meta/html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html.ini
+++ b/testing/web-platform/meta/html/semantics/interactive-elements/the-dialog-element/dialog-showModal.html.ini
@@ -22,3 +22,23 @@ top
 expected
 :
 FAIL
+[
+When
+the
+document
+is
+not
+attached
+to
+any
+pages
+showModal
+(
+)
+should
+throw
+.
+]
+expected
+:
+FAIL
