--- a/testing/web-platform/meta/pointerevents/pointerevent_touch-action-modified_touch.html.ini
+++ b/testing/web-platform/meta/pointerevents/pointerevent_touch-action-modified_touch.html.ini
@@ -7,14 +7,28 @@ modified_touch
 .
 html
 ]
-expected
-:
-ERROR
 [
 Deleting
 touch
 -
 action
+elem
+after
+pointerdown
+]
+expected
+:
+FAIL
+[
+No
+scrolling
+after
+deleting
+touch
+-
+action
+:
+none
 elem
 after
 pointerdown
