Bug 1928222 - [wpt-sync] Update web-platform-tests to 391ad9eec76213c6c236894fb7228cba7f9adb9e, a=testonly
MANUAL PUSH: wpt sync bot

wpt-head: 391ad9eec76213c6c236894fb7228cba7f9adb9e
wpt-type: landing

UltraBlame original commit: da4dff62aeb307b94ffd722345ee2dedbf511ee5

--- a/testing/web-platform/meta/css/css-contain/content-visibility/content-visibility-030.html.ini
+++ b/testing/web-platform/meta/css/css-contain/content-visibility/content-visibility-030.html.ini
@@ -24,30 +24,10 @@ linux
 )
 and
 not
-tsan
-and
 debug
-and
-fission
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
 and
 not
 tsan
-and
-debug
 and
 not
 fission
@@ -66,7 +46,26 @@ linux
 "
 )
 and
+not
+debug
+and
 tsan
+:
+[
+FAIL
+PASS
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+debug
 :
 [
 PASS
