--- a/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
+++ b/testing/web-platform/meta/fedcm/lfedcm-identity.discovery.tentative.sub.https.html.ini
@@ -64,6 +64,31 @@ os
 =
 =
 "
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+OK
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
 linux
 "
 )
@@ -160,6 +185,32 @@ os
 =
 =
 "
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+TIMEOUT
+NOTRUN
+]
+if
+(
+os
+=
+=
+"
 linux
 "
 )
@@ -186,8 +237,8 @@ not
 debug
 :
 [
-TIMEOUT
 NOTRUN
+TIMEOUT
 ]
 [
 Cross
@@ -228,8 +279,33 @@ not
 tsan
 :
 [
-TIMEOUT
 NOTRUN
+TIMEOUT
+]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+PASS
+TIMEOUT
 ]
 if
 (
@@ -245,8 +321,8 @@ not
 debug
 :
 [
-PASS
 TIMEOUT
+PASS
 NOTRUN
 ]
 [
@@ -282,8 +358,8 @@ not
 tsan
 :
 [
-PASS
 TIMEOUT
+PASS
 ]
 if
 (
