--- a/testing/web-platform/meta/hr-time/raf-coarsened-time.https.html.ini
+++ b/testing/web-platform/meta/hr-time/raf-coarsened-time.https.html.ini
@@ -28,12 +28,6 @@ linux
 "
 )
 and
-not
-debug
-and
-not
-asan
-and
 (
 processor
 =
@@ -44,7 +38,33 @@ x86_64
 )
 and
 not
+debug
+and
+not
+asan
+and
+not
 tsan
+:
+FAIL
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 FAIL
 [
