--- a/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html.ini
+++ b/testing/web-platform/meta/html/cross-origin-opener-policy/tentative/noopener/coop-noopener-allow-popups.https.html.ini
@@ -18,10 +18,13 @@ os
 =
 =
 "
-mac
+linux
 "
 :
+[
+ERROR
 TIMEOUT
+]
 if
 os
 =
@@ -145,18 +148,6 @@ os
 =
 =
 "
-win
-"
-:
-[
-TIMEOUT
-FAIL
-]
-if
-os
-=
-=
-"
 linux
 "
 :
@@ -173,7 +164,10 @@ android
 "
 :
 FAIL
+[
 TIMEOUT
+FAIL
+]
 [
 \
 n
