--- a/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
+++ b/testing/web-platform/meta/intersection-observer/scroll-margin-not-contained.html.ini
@@ -23,97 +23,6 @@ os
 =
 =
 "
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-not
-asan
-and
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-not
-asan
-and
-not
-tsan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-debug
-and
-asan
-:
-[
-PASS
-FAIL
-]
-if
-(
-os
-=
-=
-"
 win
 "
 )
@@ -126,35 +35,42 @@ processor
 =
 =
 "
-x86_64
+x86
 "
 )
 :
-[
 PASS
-FAIL
-]
 if
 (
 os
 =
 =
 "
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86_64
+win
 "
 )
 and
 debug
 :
+PASS
+if
+os
+=
+=
+"
+mac
+"
+:
+PASS
+if
+os
+=
+=
+"
+android
+"
+:
+PASS
 [
 PASS
 FAIL
