--- a/testing/web-platform/meta/partitioned-popins/partitioned-popins.request-header.tentative.https.window.js.ini
+++ b/testing/web-platform/meta/partitioned-popins/partitioned-popins.request-header.tentative.https.window.js.ini
@@ -27,18 +27,6 @@ linux
 "
 )
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-not
-asan
-and
 not
 debug
 and
@@ -55,43 +43,12 @@ os
 =
 =
 "
-linux
+mac
 "
 )
 and
-(
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-asan
-:
-[
-OK
-TIMEOUT
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-(
-processor
-=
-=
-"
-x86
-"
-)
+not
+debug
 :
 [
 OK
