--- a/testing/web-platform/meta/service-workers/service-worker/ServiceWorkerGlobalScope/unregister.https.html.ini
+++ b/testing/web-platform/meta/service-workers/service-worker/ServiceWorkerGlobalScope/unregister.https.html.ini
@@ -13,6 +13,16 @@ worker
 ]
 expected
 :
+if
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 Unregister
@@ -22,6 +32,16 @@ evaluation
 ]
 expected
 :
+if
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 Unregister
@@ -31,6 +51,16 @@ event
 ]
 expected
 :
+if
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
 [
 Unregister
@@ -40,4 +70,14 @@ event
 ]
 expected
 :
+if
+asan
+and
+not
+fission
+:
+[
+FAIL
+PASS
+]
 FAIL
