--- a/testing/web-platform/meta/webdriver/tests/classic/new_session/create_alwaysMatch.py.ini
+++ b/testing/web-platform/meta/webdriver/tests/classic/new_session/create_alwaysMatch.py.ini
@@ -1,7 +1,7 @@
 [
-target_blank_implicit_noopener_base
+create_alwaysMatch
 .
-html
+py
 ]
 expected
 :
@@ -11,7 +11,7 @@ os
 =
 =
 "
-android
+mac
 "
 )
 and
@@ -20,6 +20,5 @@ debug
 :
 [
 OK
-ERROR
 TIMEOUT
 ]
