--- a/testing/web-platform/meta/content-security-policy/webrtc/webrtc-blocked-explicit.html.ini
+++ b/testing/web-platform/meta/content-security-policy/webrtc/webrtc-blocked-explicit.html.ini
@@ -44,4 +44,30 @@ x86_64
 FAIL
 PASS
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+:
+[
+FAIL
+PASS
+]
 FAIL
