--- a/testing/web-platform/meta/notifications/getnotifications-across-processes.https.window.js.ini
+++ b/testing/web-platform/meta/notifications/getnotifications-across-processes.https.window.js.ini
@@ -76,44 +76,6 @@ x86_64
 )
 :
 PASS
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-debug
-and
-fission
-:
-[
-FAIL
-PASS
-]
-if
-(
-os
-=
-=
-"
-linux
-"
-)
-and
-not
-debug
-and
-not
-fission
-:
-[
-FAIL
-PASS
-]
 [
 PASS
 FAIL
@@ -130,10 +92,37 @@ worker
 expected
 :
 if
-asan
+(
+os
+=
+=
+"
+linux
+"
+)
 and
 not
 fission
+and
+not
+debug
+:
+[
+PASS
+FAIL
+]
+if
+(
+os
+=
+=
+"
+mac
+"
+)
+and
+not
+debug
 :
 [
 PASS
