--- a/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_pointerrawupdate_in_pointerlock.https.html.ini
+++ b/testing/web-platform/meta/pointerevents/pointerlock/pointerevent_pointerrawupdate_in_pointerlock.https.html.ini
@@ -38,6 +38,28 @@ os
 =
 =
 "
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+TIMEOUT
+if
+(
+os
+=
+=
+"
 linux
 "
 )
@@ -66,8 +88,8 @@ not
 fission
 :
 [
-ERROR
 OK
+ERROR
 TIMEOUT
 ]
 if
@@ -119,6 +141,28 @@ x86_64
 FAIL
 NOTRUN
 ]
+if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+debug
+and
+(
+processor
+=
+=
+"
+x86
+"
+)
+:
+NOTRUN
 if
 os
 =
