--- a/testing/web-platform/meta/webrtc-encoded-transform/script-transform-generateKeyFrame-simulcast.https.html.ini
+++ b/testing/web-platform/meta/webrtc-encoded-transform/script-transform-generateKeyFrame-simulcast.https.html.ini
@@ -65,15 +65,6 @@ expected
 :
 if
 (
-processor
-=
-=
-"
-x86_64
-"
-)
-and
-(
 os
 =
 =
@@ -83,12 +74,33 @@ win
 )
 and
 debug
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
 :
 [
 PASS
 FAIL
 ]
 if
+(
+os
+=
+=
+"
+win
+"
+)
+and
+not
+debug
+and
 (
 processor
 =
@@ -97,9 +109,6 @@ processor
 x86
 "
 )
-and
-not
-debug
 :
 [
 PASS
