--- a/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
+++ b/testing/web-platform/meta/workers/baseurl/alpha/sharedworker-in-worker.html.ini
@@ -15,6 +15,62 @@ os
 =
 =
 "
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+debug
+and
+fission
+:
+[
+OK
+ERROR
+]
+if
+(
+os
+=
+=
+"
+linux
+"
+)
+and
+(
+processor
+=
+=
+"
+x86_64
+"
+)
+and
+not
+debug
+and
+not
+asan
+:
+[
+OK
+ERROR
+]
+if
+(
+os
+=
+=
+"
 win
 "
 )
@@ -45,15 +101,18 @@ linux
 "
 )
 and
-not
-debug
-and
-not
-asan
+(
+processor
+=
+=
+"
+x86
+"
+)
 :
 [
-OK
 ERROR
+OK
 ]
 [
 Base
